# memory-adventure

./: BUILD.bazel  benchmark-different-memory  file_count.bzl  memory-plot.py  output_groups.cquery  parse-profile.py  readme.rst  stats.sh
Parameters/: Codegen.bzl
cpu/: BUILD.bazel  aspects.bzl  impl.bzl  impls.bzl  rules.bzl  spin.bzl
factory/: factory.bzl
memory/: BUILD.bazel  allocate.c  block.bzl  doc.rst  eat.bzl
